--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /*!
 Theme Name: Business Profile
-Theme URI: https://MicroSolutionsBD.com/
-Author: MicroSolutionsBD.com
+Theme URI: https://demo.microsolutionsbd.com/business-profile/
+Author: microsolutions
 Author URI: https://MicroSolutionsBD.com/
 Description: A WordPress theme template for creating business profile of your company by Micro Solutions Bangladesh.
 Version: 1.0.1
