Fixes that required to submit the theme in WordPress org

--- a/assets/scss/_wp-default.scss
+++ b/assets/scss/_wp-default.scss
@@ -1,4 +1,9 @@
 
+
+.bypostauthor {
+    color: $color_blackish;
+}
+
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
