--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,7 +8,7 @@ Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: msbdbp
-Tags: business-profile, reposive-design, mobile-specific-sidebars, msbd-template, bootstrap, carousel, custom-header, custom-logo, custom-menu, featured-images, threaded-comments
+Tags: custom-header, custom-logo, custom-menu, featured-images, threaded-comments
 */
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
