--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,7 +7,7 @@ Description: A WordPress theme template for creating business profile of your co
 Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: msbdbp
+Text Domain: businessprofile
 Tags: custom-header, custom-logo, custom-menu, featured-images, threaded-comments
 */
 /*--------------------------------------------------------------
