--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,10 +5,13 @@ Author: microsolutions
 Author URI: https://MicroSolutionsBD.com/
 Description: A WordPress theme template for creating business profile of your company by Micro Solutions Bangladesh.
 Version: 1.0.1
-License: GNU General Public License v2 or later
-License URI: LICENSE
+License: GNU General Public License v3
+License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: businessprofile
-Tags: custom-header, custom-logo, custom-menu, featured-images, threaded-comments
+Tags: portfolio, blog, custom-header, custom-logo, custom-menu, featured-images, threaded-comments
+Requires PHP: 5.4.0
+Requires at least: 4.9.9
+Tested up to: 5.3.0
 */
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
