More minor fixes for 1.0.4 version

--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -95,6 +95,7 @@
     }
     .sidebar {
         flex: 0 0 360px;
+        max-width: ($sidebar__width-big-screen + $default-gutter * 2);
     }
     .posts-navigation {
         margin-bottom: 0;
