--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -63,7 +63,9 @@ $h3-font-size:                  $size__font-body * 1.2;
 $h4-font-size:                  $size__font-body * 1.1;
 $h5-font-size:                  $size__font-body * 1.1;
 $h6-font-size:                  $size__font-body;
- 
+
+
+$sidebar__width-big-screen: 300px;
  
  
 /**
