--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: Business Profile
-Theme URI: https://demo.microsolutionsbd.com/business-profile/
+Theme URI: http://demo.microsolutionsbd.com/business-profile/
 Author: microsolutions
 Author URI: https://MicroSolutionsBD.com/
 Description: This is the free version of Business Profile WordPress theme.  This theme's versatility allows it to be used in a wide range of industries, making it the perfect theme if you own a business. No matter if it's a restaurant, beauty salon, house rental, hotel, coffee shop, or any other type of small business, this theme will fit your needs perfectly. With the Style Manager system you can customize your site's overall color palettes choosing from a set of predefined, carefully crafted palettes.
